objects/PSS_Catalog_Question__c.object
<CustomObject>
    <description>A question to help determine the number of service catalog items needed to complete a customer implementation</description>
    <fields>
        <fullName>LegacyId__c</fullName>
        <label>LegacyId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Numerical order of questions</description>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSS_Catalog__c</fullName>
        <label>PSS Catalog</label>
        <referenceTo>PSS_Catalog__c</referenceTo>
        <relationshipLabel>PSS Catalog Questions</relationshipLabel>
        <relationshipName>PSS_Catalog_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>answerType__c</fullName>
        <label>answerType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes/No</fullName>
                </value>
                <value>
                    <fullName>Numeric</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Locations, People, &amp; Workplaces</fullName>
                </value>
                <value>
                    <fullName>2. Routing</fullName>
                </value>
                <value>
                    <fullName>3. Outbound Dialing</fullName>
                </value>
                <value>
                    <fullName>4. Quality</fullName>
                </value>
                <value>
                    <fullName>5. Scripting</fullName>
                </value>
                <value>
                    <fullName>6. Integrations &amp; Reporting</fullName>
                </value>
                <value>
                    <fullName>7. Support &amp; Implementation Services</fullName>
                </value>
                <value>
                    <fullName>8. General Consulting</fullName>
                </value>
                <value>
                    <fullName>9. Integrations, Data Sync &amp; SSO</fullName>
                </value>
                <value>
                    <fullName>10. Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>formula__c</fullName>
        <label>Custom Formula</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRecommended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If formula is recommended, the &quot;answer&quot; to the question will be uneditable and replaced with the result of the formula calculation.  Value will take the total number of required tokens and multiple it by .3</description>
        <label>isRecommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>question__c</fullName>
        <description>The full text of the catalog question</description>
        <label>question</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tip__c</fullName>
        <label>tip</label>
        <type>TextArea</type>
    </fields>
    <label>PSS Catalog Question</label>
    <nameField>
        <label>PSS Catalog Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSS Catalog Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>